# steg

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  base64.cpp  base64.hpp  block_decoder.hpp  block_encoder.hpp  cipher.hpp  cipher_ctl.cpp  cipher_ctl.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  error.cpp  error.hpp  image.cpp  image.hpp  main.cpp  stb.hpp
sample_inputs/: payload.txt
scripts/: decode.sh  encode.sh
